k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calculatorapp
  namespace: calculatorapp-ns
  labels:
    app: calculatorapp
spec:
  type: LoadBalancer
  selector:
    app: calculatorapp
  ports:
  - port: 8000
    targetPort: 8000
